# Document.AI

./: README.md  package-lock.json
.github/workflows/: deploy.yml
Backend/: .dockerignore  DataIngestion.py  DataStorage.py  Dockerfile  VectorStore.py  app_state.py  endpoint.py  graph_nodes.py  main.py  pyproject.toml  rag_graph.py  requirements.txt
rag_frontend/: .dockerignore  .env  Dockerfile  package-lock.json  package.json
rag_frontend/src/: main.jsx
rag_frontend/src/components/: App.jsx  Chat.jsx  Chatinterface.css  Home.jsx  Setup.jsx
